# MC-Scheduler

./: AGENTS.md  handoff-2026-04-29-coverage-checkpoint.md  handoff-2026-04-29-prototype-ready.md  scheduler1.66.html
docs/: print-qa.md  tauri-readiness.md
handoffs/: handoff-2026-04-29-output-checkpoint.md  handoff-2026-04-29.md  handoff-v0.1.1.md  handoff-v0.1.10.md  handoff-v0.1.11.md  handoff-v0.1.12.md  handoff-v0.1.13.md  handoff-v0.1.14.md  handoff-v0.1.15.md  handoff-v0.1.16.md  handoff-v0.1.17.md  handoff-v0.1.18.md  handoff-v0.1.19.md  handoff-v0.1.2.md  handoff-v0.1.20.md  handoff-v0.1.21.md  handoff-v0.1.22.md  handoff-v0.1.23.md  handoff-v0.1.24.md  handoff-v0.1.25.md  handoff-v0.1.26.md  handoff-v0.1.27.md  handoff-v0.1.3.md  handoff-v0.1.4.md  handoff-v0.1.5.md  handoff-v0.1.6.md  handoff-v0.1.7.md  handoff-v0.1.8.md  handoff-v0.1.9.md
mc-scheduler-app/: index.html  package-lock.json  package.json  vite.config.ts
mc-scheduler-app/src/: App.css  App.tsx  index.css
mc-scheduler-app/src-tauri/: Cargo.toml  tauri.conf.json
mc-scheduler-app/src-tauri/capabilities/: default.json
mc-scheduler-app/src-tauri/src/: main.rs  storage.rs
mc-scheduler-app/src/domain/: backupFiles.test.ts  backupFiles.ts  holidayRules.test.ts  holidayRules.ts  legacyBackup.ts  monthTools.test.ts  monthTools.ts  positionManagement.test.ts  positionManagement.ts  scheduleOutput.test.ts  scheduleOutput.ts  schedulerRules.test.ts  schedulerRules.ts  schedulerStorage.ts  schedulerTypes.ts  smartAssignSettings.test.ts  smartAssignSettings.ts
