[package]
name = "mc-scheduler-app"
version = "0.0.4"
description = "MARS Message Center Scheduler desktop shell"
license = "UNLICENSED"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
